--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -185,6 +185,9 @@ main {
 
 .confirm-message {
   text-align: center;
+  position: absolute;
+  top: 30%;
+  padding: 6px;
 }
 
 .content {
@@ -199,6 +202,21 @@ main {
   position: relative;
   color: #fff;
   padding-top: 10px;
+}
+
+button.close-message-confirmation {
+  background: #fe142f;
+  color: white;
+  position: relative;
+  top: 50%;
+  font-size: 80%;
+  display: flex;
+  margin: auto;
+  padding: 2em;
+  color: #fff;
+  padding: 0.75rem 2.5rem;
+  border-radius: 1rem;
+  cursor: pointer;
 }
 
 .modal-body {
